fixed_some_things

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -125,6 +125,9 @@
   color: black;
   width: 33.333%;
   padding: 20px 25px;
+}
+
+.column:not(:last-child) {
   border-right: 1px solid gray;
 }
 
@@ -160,6 +163,7 @@
   border-radius: 5px;
   padding: 12px;
   margin-top: 24px;
+  text-decoration: none;
 }
 
 .gray-button{
@@ -174,6 +178,7 @@
   border-radius: 3px;
   padding: 12px;
   margin-top: 24px;
+  text-decoration: none;
 }
 
 
